<resources>
    <string name="build_number">20080722-0001</string>
    <string name="meeting_invitation" />
    <string name="account_setup_failed_security_policies_required" />
    <string name="account_settings_add_account_label" />
    <string name="account_setup_basics_instructions">You can configure email for most accounts in a few steps</string>
    <string name="accounts_context_menu_title" />
    <string name="add_contact_dlg_message_fmt" />
    <string name="add_contact_dlg_title" />
    <string name="read_attachment_label">read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments</string>
    <string name="permission_access_provider_label">Access email provider data</string>
    <string name="permission_access_provider_desc">Allows application to access email database including received messages, sent messages, user names, and passwords</string>
    <string name="app_name">Email</string>
    <string name="accounts_title">Email</string>
    <string name="compose_title">Compose</string>
    <string name="debug_title">Debug</string>
    <string name="next_action">Next</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="insert_action">Insert</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="set_conversation_movealways_action">Conversations always moved</string>
    <string name="ignore_conversation_action">Ignore</string>
    <string name="read_conversation_action">Read</string>
    <string name="unread_conversation_action">Unread</string>
    <string name="search_conversation_action">Search</string>
    <string name="delete_dialog_conv">Conversation includes multiple messages. Delete conversation?</string>
    <string name="delete_action">Delete</string>
    <string name="forward_action">Forward</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="read_unread_action">Read/Unread</string>
    <string name="read_action">Mark as read</string>
    <string name="unread_action">Mark as unread</string>
    <string name="favorite_action">Favorites</string>
    <string name="set_star_action">Add star</string>
    <string name="remove_star_action">Remove star</string>
    <string name="refresh_action">Refresh</string>
    <string name="add_account_action">Add account</string>
    <string name="deselect_all_action">Unselect all</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="open_action">Open</string>
    <string name="account_settings_action">Account settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="folders_action">Folders</string>
    <string name="accounts_action">Accounts</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="add_attachment_action">Attach</string>
    <string name="dump_settings_action">Dump settings</string>
    <string name="choose_attachment_dialog_title">Select attachment</string>
    <string name="status_loading_more">Loading messages...</string>
    <string name="status_sending_messages">Sending messages...</string>
    <string name="status_network_error">Connection error</string>
    <string name="status_sending_messages_failed">Retry sending messages</string>
    <string name="status_loading_more_failed">Retry loading more messages</string>
    <string name="notification_new_title">New email</string>
    <string name="error_loading_message_body">Unable to load message. Message too long</string>
    <string name="error_printing_body">Unable to print. Page size too big.</string>
    <string name="print">Print</string>
    <string name="print_action">Print</string>
    <string name="mailbox_name_server_inbox">Inbox</string>
    <string name="mailbox_name_server_outbox">Outbox</string>
    <string name="mailbox_name_server_drafts">Drafts</string>
    <string name="mailbox_name_server_trash">Trash</string>
    <string name="mailbox_name_server_sent">Sent</string>
    <string name="mailbox_name_server_junk">Junk</string>
    <string name="mailbox_name_display_inbox">Inbox</string>
    <string name="mailbox_name_display_outbox">Outbox</string>
    <string name="mailbox_name_display_drafts">Drafts</string>
    <string name="mailbox_name_display_trash">Trash</string>
    <string name="mailbox_name_display_sent">Sent</string>
    <string name="mailbox_name_display_junk">Junk</string>
    <string name="debug_version_fmt">Version: %s</string>
    <string name="debug_enable_debug_logging_label">Enable extra debug logging?</string>
    <string name="debug_enable_sensitive_logging_label">Enable sensitive information debug logging? (May show passwords in logs.)</string>
    <string name="debug_enable_exchange_logging_label">Enable exchange parser logging? (Extremely verbose)</string>
    <string name="debug_enable_exchange_file_logging_label">Enable exchange sd card logging?</string>
    <string name="account_folder_list_separator_accounts">Accounts</string>
    <string name="account_folder_list_summary_inbox">Combined inbox</string>
    <string name="account_folder_list_summary_unread">Unread</string>
    <string name="account_folder_list_summary_starred">Starred</string>
    <string name="account_folder_list_summary_drafts">Drafts</string>
    <string name="account_folder_list_summary_outbox">Outbox</string>
    <string name="account_folder_list_refresh_toast">Please longpress an account to refresh it</string>
    <string name="mailbox_list_title">Mailbox</string>
    <string name="message_list_load_more_messages_action">Load more messages</string>
    <string name="message_list_send_pending_messages_action">Send outgoing messages</string>
    <string name="message_view_show_pictures_action">Show pictures</string>
    <string name="account_setup_basics_email_hint">Email address</string>
    <string name="account_setup_basics_password_hint">Password</string>
    <string name="account_setup_basics_default_label">Send email from this account by default</string>
    <string name="account_setup_basics_manual_setup_action">Manual setup</string>
    <string name="account_setup_options_mail_check_frequency_label">Email check frequency</string>
    <string name="account_setup_options_default_label">Send email from this account by default</string>
    <string name="account_setup_options_notify_label">Notify me when email arrives</string>
    <string name="account_setup_options_sync_contacts_label">Sync Contacts</string>
    <string name="account_setup_options_mail_window_label">Amount to synchronise</string>
    <string name="account_settings_default_label">Default account</string>
    <string name="account_settings_default_summary">Send email from this account by default</string>
    <string name="account_settings_notify_label">Email notifications</string>
    <string name="account_settings_notify_summary">Notify in status bar when email arrives</string>
    <string name="account_settings_mail_check_frequency_label">Email check frequency</string>
    <string name="account_settings_incoming_label">Incoming settings</string>
    <string name="account_settings_outgoing_label">Outgoing settings</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="account_settings_name_label">Your name</string>
    <string name="account_settings_notifications">Notification settings</string>
    <string name="account_settings_sync_contacts_enable">Sync Contacts</string>
    <string name="account_settings_sync_contacts_summary">Also sync Contacts from this account</string>
    <string name="account_settings_vibrate_when_label">Vibrate</string>
    <string name="account_settings_vibrate_when_summary">Also vibrate when email arrives</string>
    <string name="account_settings_vibrate_when_dlg_title">Vibrate</string>
    <string name="account_settings_ringtone">Select ringtone</string>
    <string name="account_settings_servers">Server settings</string>
    <string name="list_by">List by</string>
    <string name="delete_all_action">Delete All</string>
    <string name="display_mode">Display mode</string>
    <string name="restore">Restore</string>
    <string name="text_size_action">Text size</string>
    <string name="save_to_calendar_action">Save in Calendar</string>
    <string name="account_setting_conversation_mode_label">Conversation view filter</string>
    <string name="account_setting_conversation_mode_summary">Apply conversation view filter to account</string>
    <string name="account_settings_common">Common settings</string>
    <string name="account_settings_forward_with_files_label">Forward with files</string>
    <string name="account_settings_add_signature_label">Add signature</string>
    <string name="account_settings_signature_label">Signature</string>
    <string name="account_settings_signature_default_value">Sent from Samsung Mobile</string>
    <string name="add_to_contacts_action">Add to Contacts</string>
    <string name="account_setup_options_sync_calendar_label">Sync Calendar</string>
    <string name="account_settings_sync_calendar_enable">Sync Calendar</string>
    <string name="account_settings_sync_calendar_summary">Also sync Calendar from this account</string>
    <string name="account_setup_basics_email_hint_ex">Enter email address. Ex) account@example.com</string>
    <string name="move_action">Move to</string>
    <string name="view_mode_action">View mode</string>
    <string name="account_setup_options_sync_sms_label">Sync SMS</string>
    <string name="account_settings_recent_messages_limit">Recent messages</string>
    <string name="account_setup_options_recent_messages_limit_25">25</string>
    <string name="create_action">Create</string>
    <string name="follow_up_flag">Flag</string>
    <string name="account_setup_options_mail_email_size_label">Emails retrieval size</string>
    <string name="account_settings_mail_email_size_label">Email size</string>
    <string name="account_settings_mail_empty_trash_label">Empty server trash</string>
    <string name="account_settings_mail_empty_trash_message">Delete contents in server trash?</string>
    <string name="account_settings_mail_empty_trash_positive">Yes</string>
    <string name="account_settings_mail_empty_trash_negative">No</string>
    <string name="account_settings_textpreview_label">Text preview size</string>
    <string name="account_settings_sync_schedule">Sync schedule</string>
    <string name="account_settings_sync_schedule_summary">Peak / Off-peak schedule control</string>
    <string name="sync_schedule_peak_schedule">Peak schedule</string>
    <string name="sync_schedule_off_peak_schedule">Off-peak schedule</string>
    <string name="out_of_office_label">Out of office settings</string>
    <string name="auto_discover_setup_exchange_email_address_label">Email address</string>
    <string name="auto_discover_setup_exchange_domain_label">Domain</string>
    <string name="auto_discover_setup_exchange_user_name_label">User name</string>
    <string name="auto_discover_setup_exchange_password_label">Password</string>
    <string name="auto_discover_setup_exchange_trust_certificates_label">Accept all SSL certificates</string>
    <string name="account_setup_options_calendar_window_label">Period to sync Calendar</string>
    <string name="account_settings_smime_security_policy_list">Security policy list</string>
    <string name="account_setting_sms_sync">Sync SMS</string>
    <string name="account_setting_sms_sync_summary_off">SMS sync off</string>
</resources>