<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="account_settings">
        <EditTextPreference android:maxLength="320" android:title="@string/account_settings_description_label" android:key="account_description" android:summary="" android:order="1" android:dialogTitle="@string/account_settings_description_label" android:inputType="textPersonName|textCapWords" />
        <EditTextPreference android:maxLength="320" android:title="@string/account_settings_name_label" android:key="account_name" android:summary="" android:order="2" android:dialogTitle="@string/account_settings_name_label" android:inputType="textPersonName|textCapWords" />
        <ListPreference android:entries="@array/account_settings_check_frequency_entries" android:title="@string/account_settings_mail_check_frequency_label" android:key="account_check_frequency" android:order="4" android:dialogTitle="@string/account_settings_mail_check_frequency_label" android:entryValues="@array/account_settings_check_frequency_values" />
        <CheckBoxPreference android:title="@string/account_settings_default_label" android:key="account_default" android:summary="@string/account_settings_default_summary" android:order="6" />
        <PreferenceScreen android:title="@string/out_of_office_label" android:key="out_of_office" android:order="7" />
        <com.android.email.activity.setup.EmptyTrashDialog android:title="@string/account_settings_mail_empty_trash_label" android:key="account_empty_trash" android:order="8" android:dialogTitle="@string/account_settings_mail_empty_trash_label" android:dialogMessage="@string/account_settings_mail_empty_trash_message" android:dialogIcon="@android:drawable/ic_dialog_alert" android:positiveButtonText="@string/account_settings_mail_empty_trash_positive" android:negativeButtonText="@string/account_settings_mail_empty_trash_negative" />
        <PreferenceScreen android:title="@string/account_settings_sync_schedule" android:key="account_sync_schedule" android:summary="@string/account_settings_sync_schedule_summary" android:order="9">
            <intent android:targetPackage="com.android.email" android:targetClass="com.android.email.activity.setup.SyncScheduleSettings" />
        </PreferenceScreen>
        <ListPreference android:title="@string/account_settings_mail_email_size_label" android:key="account_email_size" android:order="11" android:dialogTitle="@string/account_settings_mail_email_size_label" />
        <PreferenceScreen android:title="@string/account_settings_smime_security_policy_list" android:key="security_policy_list" android:order="12" />
        <EditTextPreference android:maxLength="3" android:title="@string/account_settings_textpreview_label" android:key="account_textpreview" android:summary="" android:order="13" android:dialogTitle="@string/account_settings_textpreview_label" android:inputType="number" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_notifications">
        <CheckBoxPreference android:title="@string/account_settings_notify_label" android:key="account_notify" android:summary="@string/account_settings_notify_summary" android:defaultValue="true" />
        <RingtonePreference android:title="@string/account_settings_ringtone" android:key="account_ringtone" android:dependency="account_notify" android:defaultValue="content://settings/system/notification_sound" android:ringtoneType="notification" />
        <ListPreference android:entries="@array/account_settings_vibrate_when_entries" android:title="@string/account_settings_vibrate_when_label" android:key="account_settings_vibrate_when" android:summary="@string/account_settings_vibrate_when_summary" android:dependency="account_notify" android:defaultValue="never" android:dialogTitle="@string/account_settings_vibrate_when_dlg_title" android:entryValues="@array/account_settings_vibrate_when_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_servers" android:key="account_servers">
        <PreferenceScreen android:title="@string/account_settings_incoming_label" android:key="incoming" />
        <PreferenceScreen android:title="@string/account_settings_outgoing_label" android:key="outgoing" />
        <CheckBoxPreference android:title="@string/account_settings_sync_contacts_enable" android:key="account_sync_contacts" android:summary="@string/account_settings_sync_contacts_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/account_settings_sync_calendar_enable" android:key="account_sync_calendar" android:summary="@string/account_settings_sync_calendar_summary" android:defaultValue="true" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/account_setting_conversation_mode_label" android:key="account_conversation_mode" android:summary="@string/account_setting_conversation_mode_summary" android:defaultValue="false" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/account_setting_sms_sync" android:key="account_sms_sync" android:summary="@string/account_setting_sms_sync_summary_off" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_common" android:key="common_settings">
        <ListPreference android:entries="@array/account_settings_recent_messages_limit_entries" android:title="@string/account_settings_recent_messages_limit" android:key="account_recent_messages_limit" android:defaultValue="@string/account_setup_options_recent_messages_limit_25" android:dialogTitle="@string/account_settings_recent_messages_limit" android:entryValues="@array/account_settings_recent_messages_limit_values" />
        <CheckBoxPreference android:title="@string/account_settings_forward_with_files_label" android:key="forward_with_files" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/account_settings_add_signature_label" android:key="add_signature" android:defaultValue="true" />
        <EditTextPreference android:maxLength="1000" android:title="@string/account_settings_signature_label" android:key="signature" android:dependency="add_signature" android:defaultValue="@string/account_settings_signature_default_value" android:dialogTitle="@string/account_settings_signature_label" android:inputType="textCapWords|textMultiLine" />
    </PreferenceCategory>
</PreferenceScreen>
