<?xml version="1.0" encoding="UTF-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_restore" android:id="@id/restore" android:visibility="gone" android:title="@string/restore" android:alphabeticShortcut="r" />
    <item android:icon="@drawable/ic_menu_reply" android:id="@id/reply" android:title="@string/reply_action" />
    <item android:icon="@drawable/ic_menu_forward_mail" android:id="@id/forward" android:title="@string/forward_action" android:alphabeticShortcut="f" />
    <item android:icon="@drawable/ic_menu_delete" android:id="@id/delete" android:title="@string/delete_action" />
    <item android:icon="@drawable/ic_menu_directions" android:id="@id/move" android:visibility="gone" android:title="@string/move_action" />
    <item android:icon="@drawable/ic_menu_gallery" android:id="@id/show_pictures" android:title="@string/message_view_show_pictures_action" />
    <item android:icon="@drawable/ic_menu_view" android:id="@id/display_mode" android:title="@string/display_mode" android:alphabeticShortcut="d" />
    <item android:icon="@drawable/ic_menu_zoom" android:id="@id/text_size_action" android:title="@string/text_size_action" />
    <item android:icon="@drawable/ic_menu_add_to_phonebook" android:id="@id/add_to_contacts" android:title="@string/add_to_contacts_action" />
    <item android:icon="@drawable/ic_menu_save_to_calendar" android:enabled="false" android:id="@id/save_to_calendar" android:title="@string/save_to_calendar_action" android:alphabeticShortcut="c" />
</menu>