<?xml version="1.0" encoding="UTF-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_refresh" android:id="@id/refresh" android:title="@string/refresh_action" android:alphabeticShortcut="r" />
    <item android:icon="@drawable/ic_menu_compose" android:id="@id/compose" android:title="@string/compose_action" android:alphabeticShortcut="c" />
    <item android:icon="@drawable/ic_menu_account_list" android:id="@id/accounts" android:title="@string/accounts_action" />
    <item android:icon="@drawable/ic_menu_account_settings" android:id="@id/account_settings" android:title="@string/account_settings_action" />
    <item android:icon="@android:drawable/ic_menu_add" android:id="@id/folder_create" android:visible="false" android:title="@string/create_action" />
</menu>