<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:scrollbarStyle="insideOverlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:id="@id/account_check_frequency_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_options_mail_check_frequency_label" />
            <Spinner android:id="@id/account_check_frequency" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/account_setup_options_mail_check_frequency_label" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:id="@id/account_peak_schedule_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sync_schedule_peak_schedule" />
            <Spinner android:id="@id/account_peak_schedule" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:id="@id/account_offpeak_schedule_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sync_schedule_off_peak_schedule" />
            <Spinner android:id="@id/account_offpeak_schedule" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:id="@id/account_sync_window_label" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_options_mail_window_label" />
            <Spinner android:id="@id/account_sync_window" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/account_setup_options_mail_window_label" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:id="@id/account_email_size_label" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_options_mail_email_size_label" />
            <Spinner android:id="@id/account_email_size" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/account_setup_options_mail_email_size_label" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:id="@id/account_calendar_sync_window_label" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_options_calendar_window_label" />
            <Spinner android:id="@id/account_calendar_sync_window" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/account_setup_options_calendar_window_label" />
            <CheckBox android:id="@id/account_default" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_options_default_label" />
            <CheckBox android:id="@id/account_notify" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_options_notify_label" />
            <CheckBox android:id="@id/account_sync_contacts" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_options_sync_contacts_label" />
            <CheckBox android:id="@id/account_sync_calendar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_options_sync_calendar_label" />
            <CheckBox android:id="@id/account_sync_sms" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_options_sync_sms_label" />
        </LinearLayout>
        <com.sec.android.touchwiz.widget.TwSoftkeyView android:id="@id/softkeyview" android:layout_width="fill_parent" android:layout_height="57.0dip"
          xmlns:touchwiz="http://schemas.android.com/apk/res/touchwiz">
            <com.android.email.EmailTwSoftkeyItem android:id="@id/tw_next" android:layout_width="wrap_content" android:layout_height="fill_parent" email:itemText="@string/next_action"
              xmlns:email="http://schemas.android.com/apk/res/com.android.email" />
        </com.sec.android.touchwiz.widget.TwSoftkeyView>
    </LinearLayout>
</ScrollView>