<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbarStyle="insideOverlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_discover_setup_exchange_email_address_label" />
            <EditText android:id="@id/account_email_address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" android:imeOptions="actionNext" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_discover_setup_exchange_domain_label" />
            <EditText android:id="@id/account_domain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" android:imeOptions="actionNext" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_discover_setup_exchange_user_name_label" />
            <EditText android:id="@id/account_user_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" android:imeOptions="actionNext" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_discover_setup_exchange_password_label" />
            <EditText android:id="@id/account_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textPassword" android:imeOptions="actionDone" />
            <CheckBox android:id="@id/account_trust_certificates" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_discover_setup_exchange_trust_certificates_label" />
        </LinearLayout>
        <com.sec.android.touchwiz.widget.TwSoftkeyView android:id="@id/softkeyview" android:layout_width="fill_parent" android:layout_height="57.0dip"
          xmlns:touchwiz="http://schemas.android.com/apk/res/touchwiz">
            <com.android.email.EmailTwSoftkeyItem android:id="@id/manual_setup" android:layout_width="wrap_content" android:layout_height="fill_parent" email:itemText="@string/account_setup_basics_manual_setup_action"
              xmlns:email="http://schemas.android.com/apk/res/com.android.email" />
            <com.android.email.EmailTwSoftkeyItem android:id="@id/next" android:layout_width="wrap_content" android:layout_height="fill_parent" email:itemImageAlign="right" email:itemText="@string/next_action" email:itemImage="@drawable/button_indicator_next"
              xmlns:email="http://schemas.android.com/apk/res/com.android.email" />
        </com.sec.android.touchwiz.widget.TwSoftkeyView>
    </LinearLayout>
</ScrollView>
