<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:scrollbarStyle="insideOverlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:layout_weight="1.0">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorPrimary" android:id="@id/account_setup_basics_instructions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0px" android:layout_marginTop="10.0px" android:layout_marginBottom="8.0px" android:text="@string/account_setup_basics_instructions" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:id="@id/instructions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/account_setup_basics_email_hint" />
            <EditText android:id="@id/account_email" android:nextFocusUp="@id/tw_manual_setup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/account_setup_basics_email_hint_ex" android:maxLength="320" android:inputType="textEmailAddress" android:imeOptions="actionNext" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:id="@id/pass_instructions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/account_setup_basics_password_hint" />
            <EditText android:id="@id/account_password" android:nextFocusDown="@id/next" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/account_setup_basics_password_hint" android:maxLength="320" android:inputType="textPassword" android:imeOptions="actionDone" />
            <CheckBox android:id="@id/account_default" android:visibility="gone" android:nextFocusUp="@id/account_password" android:nextFocusDown="@id/tw_manual_setup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_basics_default_label" />
        </LinearLayout>
        <com.sec.android.touchwiz.widget.TwSoftkeyView android:id="@id/softkeyview" android:layout_width="fill_parent" android:layout_height="57.0dip"
          xmlns:touchwiz="http://schemas.android.com/apk/res/touchwiz">
            <com.android.email.EmailTwSoftkeyItem android:id="@id/tw_manual_setup" android:nextFocusRight="@id/tw_next" android:nextFocusDown="@id/account_email" android:layout_width="wrap_content" android:layout_height="fill_parent" email:itemText="@string/account_setup_basics_manual_setup_action"
              xmlns:email="http://schemas.android.com/apk/res/com.android.email" />
            <com.android.email.EmailTwSoftkeyItem android:id="@id/tw_next" android:nextFocusDown="@id/account_email" android:layout_width="wrap_content" android:layout_height="fill_parent" email:itemImageAlign="right" email:itemText="@string/next_action" email:itemImage="@drawable/button_indicator_next"
              xmlns:email="http://schemas.android.com/apk/res/com.android.email" />
        </com.sec.android.touchwiz.widget.TwSoftkeyView>
    </LinearLayout>
</ScrollView>